PR/47316: Henning Petersen: Memory leak in envstat with config file.